--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Whiskey Drop | Taste a new whiskey every month</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/ecac4ec280.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
   </script>
@@ -28,17 +29,26 @@
       </div>
     </nav>
     <article class="container mt-3">
+      <div class="row d-none d-sm-block">
+        <div class="col-12">
+          <div class="alert alert-warning">
+            <strong>Sale Now On!</strong> We've got a sale on. Get a 12-month subsrciption for the price of 6! <a href="">See here for details!</a>
+          </div>
+        </div>
+      </div>
+
       <!-- Callout -->
       <div class="row">
         <div class="col-12">
           <section class="callout jumbotron text-center">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+            <p class="lead">Sign up today to start receiving the world's best whiskeys every month.
               <s class="d-none d-sm-inline">€19.99</s>
               <span class="d-inline d-sm-none"><br></span>
               <strong><mark>First one is free!</mark></strong></p>
             <button class="btn btn-success btn-lg">Sign Up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink
+                responsibly.</small>
             </p>
           </section>
         </div>
@@ -55,16 +65,31 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-6">
-            <blockquote class="blockquote">
-              <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-              <p>- Jane Doe</p>
-            </blockquote>
+            <div class="media">
+              <div class="d-none d-sm-block">
+                <img src="images/girl-image.png" class="rounded-circle mr-3" height=100 width=100>
+              </div>
+              <div class="media-body">
+                <blockquote class="blockquote">
+                  <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                  <p>- Jane Doe</p>
+                </blockquote>
+              </div>
+            </div>
+
           </div>
           <div class="col-12 col-md-6">
-            <blockquote class="blockquote">
-              <p>I haven't been sober for months!</p>
-              <p>- Jane Doe</p>
-            </blockquote>
+            <div class="media">
+              <div class="d-none d-sm-block">
+                <img src="images/guy-image.png" class="rounded-circle mr-3" height=100 width=100>
+              </div>
+              <div class="media-body">
+                <blockquote class="blockquote">
+                  <p>I haven't been sober for months!</p>
+                  <p>- Jane Doe</p>
+                </blockquote>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -81,7 +106,7 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-              <h3>Feature 1</h3>
+              <h3><i class="fa-solid fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
@@ -91,7 +116,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <div class="feature">
-              <h3>Feature 2</h3>
+              <h3><i class="fa-solid fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
@@ -101,7 +126,7 @@
           </div>
           <div class="col-12 d-md-none d-lg-block col-lg-4">
             <div class="feature">
-              <h3>Feature 3</h3>
+              <h3><i class="fa-solid fa-circle-xmark d-none d-sm-inline"></i> Feature 3</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex
