--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Whiskey Drop | Taste a new whiskey every month</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/ecac4ec280.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
 <body>
@@ -43,7 +45,7 @@
   </nav>
   <!-- /.navigation -->
 
-  <article class="container mt-3">
+  <!--<div class="container alert-container">
     <div class="row d-none d-sm-block">
       <div class="col-12">
         <div class="alert alert-warning">
@@ -52,8 +54,10 @@
         </div>
       </div>
     </div>
+  </div>-->
 
-    <!-- Callout -->
+  <!-- Callout -->
+  <div class="container-fluid callout-container">
     <div class="row">
       <div class="col-12">
         <section class="callout jumbotron text-center">
@@ -69,10 +73,11 @@
         </section>
       </div>
     </div>
-    <!-- /.callout -->
-    <hr>
+  </div>
+  <!-- /.callout -->
 
-    <!-- Quotes -->
+  <!-- Quotes -->
+  <div class="container quotes-container">
     <section class="quotes">
       <div class="row">
         <div class="col-12 my-5">
@@ -109,10 +114,11 @@
         </div>
       </div>
     </section>
-    <!-- /.quotes -->
-    <hr>
+  </div>
+  <!-- /.quotes -->
 
-    <!-- Features -->
+  <!-- Features -->
+  <div class="container features-container">
     <section class="features">
       <div class="row">
         <div class="col-12 my-5">
@@ -153,41 +159,10 @@
         </div>
       </div>
     </section>
-    <!-- /.features -->
-    <!--Top 5 Whiskeys-->
-    <section class="feature">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Origin</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Jack Daniels</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Jameson</td>
-            <td>Ireland</td>
-          </tr>
-          <tr>
-            <td>Highland Malt</td>
-            <td>Scotland</td>
-          </tr>
-          <tr>
-            <td>Bushmills</td>
-            <td>N Ireland</td>
-          </tr>
-          <tr>
-            <td>Dingle Whiskey</td>
-            <td>Ireland</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-  </article>
+  </div>
+  <!-- /.features -->
+
+
 
   <div class="modal" tabindex="-1" role="dialog" id="signUpModal">
     <div class="modal-dialog" role="document">
@@ -222,10 +197,16 @@
     </div>
   </div>
 
-  
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+  </script>
   <!--script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
   </script>
